--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-fundamentals-example",
+  "name": "deepwoken-talent-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
