--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "concurrently \"next dev\" \"node server.js\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,7 +14,12 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.8.3",
-    "next": "12.1.6",
+    "concurrently": "^6.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "isomorphic-unfetch": "^4.0.2",
+    "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
